Set repository end of line char to LF

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "javascript.implicitProjectConfig.checkJs": true,
-  "javascript.implicitProjectConfig.experimentalDecorators": true
+  "js.implicitProjectConfig.checkJs": true,
+  "js.implicitProjectConfig.experimentalDecorators": true
 }
