--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Beautify",
   "description": "Beautify code in place for VS Code",
   "version": "1.4.11",
-  "publisher": "HookyQR",
+  "publisher": "vsce-toolroom",
   "engines": {
     "vscode": "^1.22.0"
   },
@@ -44,11 +44,11 @@
     ],
     "commands": [
       {
-        "command": "HookyQR.beautify",
+        "command": "beautify.beautifySelection",
         "title": "Beautify selection"
       },
       {
-        "command": "HookyQR.beautifyFile",
+        "command": "beautify.beautifyFile",
         "title": "Beautify file"
       }
     ],
@@ -218,7 +218,8 @@
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.10.36",
-    "@types/vscode": "^1.59.0",
+    "@types/vscode": "^1.22.0",
+    "@vscode/test-electron": "^2.3.2",
     "expect.js": "^0.3.1",
     "mocha": "^5.2.0",
     "os-browserify": "^0.3.0",
@@ -226,13 +227,11 @@
     "process": "^0.11.10",
     "typescript": "^2.6.1",
     "util": "^0.12.4",
-    "vscode": "^1.1.37",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test",
+    "test": "mocha ./test/harness.js",
     "compile-web": "webpack --config ./build/web-extension.webpack.config.js",
     "watch-web": "webpack --watch --config ./build/web-extension.webpack.config.js",
     "package-web": "webpack --mode production --devtool hidden-source-map --config ./build/web-extension.webpack.config.js",
@@ -240,9 +239,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/HookyQR/VSCodeBeautify"
+    "url": "https://github.com/vsce-toolroom/vscode-beautify"
   },
   "bugs": {
-    "url": "https://github.com/HookyQR/VSCodeBeautify/issues"
+    "url": "https://github.com/vsce-toolroom/vscode-beautify/issues"
   }
 }
