Update color of Marketplace banner

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "icon": "icon.png",
   "galleryBanner": {
-    "color": "#e8e030",
+    "color": "#2c2c32",
     "theme": "light"
   },
   "license": "MIT",
